--- a/app/src/main/res/layout/crear_servicio_especialista.xml
+++ b/app/src/main/res/layout/crear_servicio_especialista.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <!-- Encabezado -->
     <TextView
@@ -27,7 +26,8 @@
         android:layout_marginTop="33dp"
         android:layout_gravity="top"
         android:background="@drawable/ic_flechavolver"
-        android:scaleType="centerInside" />
+        android:scaleType="centerInside"
+        android:onClick="backMenu"/>
 
 
     <TextView
@@ -124,45 +124,40 @@
 
     <TextView
         android:id="@+id/txtCargarImagenes"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_marginStart="21dp"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="-0.5dp"
-        android:layout_gravity="top|left"
-        android:gravity="center_horizontal|center_vertical"
         android:includeFontPadding="false"
-        android:maxLines="1"
-        android:singleLine="true"
         android:text="@string/imagenes_de_tus_trabajos_opcional"
-        android:textColor="#FF000000"
+        android:textColor="@color/black"
         android:textSize="20sp"
+        android:gravity="center"
         android:layout_below="@id/edPrecio"
         tools:ignore="RtlHardcoded" />
 
     <Button
         android:id="@+id/btnCargarImagenes"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:layout_below="@+id/txtCargarImagenes"
-        android:layout_alignStart="@+id/txtCargarImagenes"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
+        android:textSize="22sp"
         android:text="@string/btn_cargar_imgservicio_especialista" />
 
     <Button
         android:layout_below="@id/btnCargarImagenes"
         android:id="@+id/btnPublicar"
-        android:layout_width="186dp"
-        android:layout_height="46dp"
-        android:layout_marginLeft="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginTop="25dp"
-        android:layout_gravity="top|left"
+        android:textSize="22sp"
         android:text="@string/btn_publicar_servicio"
-        android:textColor="#FFFFFF"
-        android:gravity="center"
-        android:padding="10dp"
-        tools:ignore="RtlHardcoded" />
-
+        android:textColor="@color/white"
+        tools:ignore="RtlHardcoded"
+        android:onClick="goCards"/>
 
 </RelativeLayout>
