--- a/app/src/main/res/layout/ver_servicios_especialista.xml
+++ b/app/src/main/res/layout/ver_servicios_especialista.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="@color/color_navbar_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -28,319 +28,40 @@
         android:layout_marginStart="11dp"
         android:layout_marginTop="35dp"
         android:src="@drawable/ic_flechavolver"
+        android:onClick="backMenu"
         />
 
-    <!-- Contenido -->
+    <!-- Contenido de las cards servicios  -->
     <ScrollView
-        android:id="@+id/scrollv_servicios_especialista"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/header"
-        android:layout_above="@id/btn_ver_perfil"
+        android:layout_above="@id/btn_ayuda_especialista"
+        android:background="@color/white"
         >
-        <RelativeLayout
+        <LinearLayout
+            android:id="@+id/servicios_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:gravity="center"
-            >
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/fondo_servicio"
-                android:layout_width="350dp"
-                android:layout_height="230dp"
-                android:layout_gravity="center"
-                android:background="@color/color_servicio"
-                app:shapeAppearanceOverlay="@style/radius5"
-                />
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/imagen_servicio"
-                android:layout_width="140dp"
-                android:layout_height="210dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="10dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/servicio_especialista"
-                app:shapeAppearanceOverlay="@style/radius5"
-                />
-
-            <TextView
-                android:id="@+id/txt_nombreservicio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_nombre_servicio"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_toEndOf="@id/imagen_servicio"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="10dp"
-                />
-            <View
-                android:id="@+id/nombreservicio"
-                android:layout_width="180dp"
-                android:layout_height="25dp"
-                android:layout_toEndOf="@id/imagen_servicio"
-                android:layout_below="@id/txt_nombreservicio"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="10dp"
-                android:background="@color/color_servicio2"
-                />
-
-            <TextView
-                android:id="@+id/txt_descripcion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_descripcion_servicio"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_below="@id/nombreservicio"
-                android:layout_toEndOf="@id/imagen_servicio"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="3dp"
-                />
-            <View
-                android:id="@+id/descripcionservicio"
-                android:layout_width="180dp"
-                android:layout_height="80dp"
-                android:layout_toEndOf="@id/imagen_servicio"
-                android:layout_below="@id/txt_descripcion"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="10dp"
-                android:background="@color/color_servicio2"
-                />
-
-            <TextView
-                android:id="@+id/txt_precioservicio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_precio_servicio"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_below="@id/descripcionservicio"
-                android:layout_toEndOf="@id/imagen_servicio"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="8dp"
-                />
-            <View
-                android:id="@+id/precioservicio"
-                android:layout_width="90dp"
-                android:layout_height="30dp"
-                android:layout_toEndOf="@id/txt_precioservicio"
-                android:layout_below="@id/descripcionservicio"
-                android:layout_marginTop="6dp"
-                android:layout_marginStart="10dp"
-                android:background="@color/color_servicio2"
-                />
-
-            <!-- Servicio2 -->
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/fondo_servicio2"
-                android:layout_width="350dp"
-                android:layout_height="230dp"
-                android:layout_gravity="center"
-                android:background="@color/color_servicio"
-                app:shapeAppearanceOverlay="@style/radius5"
-                android:layout_below="@id/fondo_servicio"
-                android:layout_marginTop="20dp"
-                />
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/imagen_servicio2"
-                android:layout_width="140dp"
-                android:layout_height="210dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="10dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/servicio_especialista"
-                app:shapeAppearanceOverlay="@style/radius5"
-                android:layout_below="@id/fondo_servicio"
-                />
-
-            <TextView
-                android:id="@+id/txt_nombreservicio2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_nombre_servicio"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_toEndOf="@id/imagen_servicio2"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="30dp"
-                android:layout_below="@id/fondo_servicio"
-                />
-            <View
-                android:id="@+id/nombreservicio2"
-                android:layout_width="180dp"
-                android:layout_height="25dp"
-                android:layout_toEndOf="@id/imagen_servicio2"
-                android:layout_below="@id/txt_nombreservicio2"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="10dp"
-                android:background="@color/color_servicio2"
-                />
-
-            <TextView
-                android:id="@+id/txt_descripcion2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_descripcion_servicio"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_below="@id/nombreservicio2"
-                android:layout_toEndOf="@id/imagen_servicio2"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="3dp"
-                />
-            <View
-                android:id="@+id/descripcionservicio2"
-                android:layout_width="180dp"
-                android:layout_height="80dp"
-                android:layout_toEndOf="@id/imagen_servicio2"
-                android:layout_below="@id/txt_descripcion2"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="10dp"
-                android:background="@color/color_servicio2"
-                />
-
-            <TextView
-                android:id="@+id/txt_precioservicio2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_precio_servicio"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_below="@id/descripcionservicio2"
-                android:layout_toEndOf="@id/imagen_servicio2"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="8dp"
-                />
-            <View
-                android:id="@+id/precioservicio2"
-                android:layout_width="90dp"
-                android:layout_height="30dp"
-                android:layout_toEndOf="@id/txt_precioservicio2"
-                android:layout_below="@id/descripcionservicio2"
-                android:layout_marginTop="6dp"
-                android:layout_marginStart="10dp"
-                android:background="@color/color_servicio2"
-                />
-
-            <!-- Servicio3 -->
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/fondo_servicio3"
-                android:layout_width="350dp"
-                android:layout_height="230dp"
-                android:layout_gravity="center"
-                android:background="@color/color_servicio"
-                app:shapeAppearanceOverlay="@style/radius5"
-                android:layout_below="@id/fondo_servicio2"
-                android:layout_marginTop="20dp"
-                />
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/imagen_servicio3"
-                android:layout_width="140dp"
-                android:layout_height="210dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="10dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/servicio_especialista"
-                app:shapeAppearanceOverlay="@style/radius5"
-                android:layout_below="@id/fondo_servicio2"
-                />
-
-            <TextView
-                android:id="@+id/txt_nombreservicio3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_nombre_servicio"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_toEndOf="@id/imagen_servicio3"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="30dp"
-                android:layout_below="@id/fondo_servicio2"
-                />
-            <View
-                android:id="@+id/nombreservicio3"
-                android:layout_width="180dp"
-                android:layout_height="25dp"
-                android:layout_toEndOf="@id/imagen_servicio3"
-                android:layout_below="@id/txt_nombreservicio3"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="10dp"
-                android:background="@color/color_servicio2"
-                />
-
-            <TextView
-                android:id="@+id/txt_descripcion3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_descripcion_servicio"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_below="@id/nombreservicio3"
-                android:layout_toEndOf="@id/imagen_servicio3"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="3dp"
-                />
-            <View
-                android:id="@+id/descripcionservicio3"
-                android:layout_width="180dp"
-                android:layout_height="80dp"
-                android:layout_toEndOf="@id/imagen_servicio3"
-                android:layout_below="@id/txt_descripcion3"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="10dp"
-                android:background="@color/color_servicio2"
-                />
-
-            <TextView
-                android:id="@+id/txt_precioservicio3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_precio_servicio"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_below="@id/descripcionservicio3"
-                android:layout_toEndOf="@id/imagen_servicio3"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="8dp"
-                />
-            <View
-                android:id="@+id/precioservicio3"
-                android:layout_width="90dp"
-                android:layout_height="30dp"
-                android:layout_toEndOf="@id/txt_precioservicio3"
-                android:layout_below="@id/descripcionservicio3"
-                android:layout_marginTop="6dp"
-                android:layout_marginStart="10dp"
-                android:background="@color/color_servicio2"
-                />
-        </RelativeLayout>
+            />
     </ScrollView>
 
+    <!-- Botón Ayuda -->
     <Button
-        android:id="@+id/btn_ver_perfil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="119dp"
-        android:layout_marginEnd="119dp"
-        android:layout_marginTop="20dp"
+        android:id="@+id/btn_ayuda_especialista"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
-        android:text="@string/btn_ver_perfil_especialista"
-        android:textSize="25sp" />
+        android:text="@string/txt_ayuda_especialista"
+        android:textSize="25sp"
+        android:onClick="goHelp"/>
 
 </RelativeLayout>
+
+
+
+
+
+
