Se agrego responsividad de prueba para la portada,  Se agrego al funcion de cerrar sesion y se mejoro la navegacion de los servicios

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -204,7 +204,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
         android:layout_below="@+id/rectangle4"
-        />
+        android:onClick="outSession"/>
+
 
     <TextView
         android:id="@+id/Nombre5"
