--- a/app/src/main/res/layout/ver_perfil_servicios_especialista.xml
+++ b/app/src/main/res/layout/ver_perfil_servicios_especialista.xml
@@ -24,11 +24,12 @@
         android:padding="25dp"/>
 
     <ImageView
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="11dp"
         android:layout_marginTop="30dp"
-        android:src="@drawable/ic_flechavolver" />
+        android:src="@drawable/ic_flechavolver"
+        />
 
     <!-- Contenido -->
     <com.google.android.material.imageview.ShapeableImageView
