--- a/app/src/main/res/layout/ver_detalle_servicios_especialista.xml
+++ b/app/src/main/res/layout/ver_detalle_servicios_especialista.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
-    tools:context=".Specialist.ViewSpecialistProfileService"
+    tools:context=".Specialist.ViewSpecialistDetailService"
     >
 
     <!-- Header -->
@@ -24,12 +24,11 @@
         android:padding="25dp"/>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginStart="11dp"
         android:layout_marginTop="30dp"
-        android:src="@drawable/ic_flechavolver"
-        />
+        android:src="@drawable/ic_flechavolver" />
 
     <!-- Contenido -->
     <com.google.android.material.imageview.ShapeableImageView
