--- a/app/src/main/res/drawable/styles_imagen_redondeada_categorias.xml
+++ b/app/src/main/res/drawable/styles_imagen_redondeada_categorias.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/input_categoria" />
-    <corners android:radius="25dp" /> <!-- Cambia el valor de "radius" según el redondeo que desees -->
+    <solid android:color="#4B4B4B" />
+    <corners android:radius="18dp" /> <!-- Cambia el valor de "radius" según el redondeo que desees -->
 </shape>
