--- a/app/src/main/res/layout/cambiar_contra_especialista.xml
+++ b/app/src/main/res/layout/cambiar_contra_especialista.xml
@@ -31,11 +31,11 @@
         />
 
     <LinearLayout
-        android:layout_below="@id/txtCambiarpassEspecialista"
-        android:layout_marginTop="100dp"
         android:id="@+id/containerContraseñasEspecialista"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/txtCambiarpassEspecialista"
+        android:layout_marginTop="50dp"
         android:orientation="vertical"
         android:layout_centerHorizontal="true">
 
@@ -44,11 +44,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="-0.5dp"
             android:layout_gravity="top"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/contrase_a_actual"
-            android:textColor="#FF000000"
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:layout_marginStart="30dp"
             />
@@ -146,7 +145,7 @@
         android:layout_marginStart="80dp"
         android:layout_marginEnd="80dp"
         android:layout_centerInParent="true"
-        android:layout_marginTop="31dp"
+        android:layout_marginTop="50dp"
         android:text="@string/btn_cambiar_contrase_a"
         android:textSize="20sp"
         />
