--- a/app/src/main/res/layout/registro_especialista.xml
+++ b/app/src/main/res/layout/registro_especialista.xml
@@ -164,7 +164,7 @@
                     <EditText
                         android:id="@+id/edCorreo_especialista"
                         android:layout_width="match_parent"
-                        android:layout_height="50dp"
+                        android:layout_height="wrap_content"
                         android:paddingStart="10dp"
                         android:background="@drawable/image_rectangle1"
                         />
