--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- Tema default del sistema -->
     <color name="button_color">#2F2F2F</color>
+    <color name="button_color2">#F2F2F2</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 
