--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
     <style name="Base.Theme.Fixit" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/button_color</item>
     </style>
+    <style name="Base.Theme.Fixit2" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/button_color2</item>
+    </style>
 
     <style name="Base.Theme.ProyectoFixitFinal.Fixit" parent="Base.Theme.Fixit" />
 </resources>
