--- a/app/src/main/res/layout/login_especialista.xml
+++ b/app/src/main/res/layout/login_especialista.xml
@@ -43,7 +43,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LoginEspecialista"
-        app:shapeAppearanceOverlay="@style/radius7"/>
+        app:shapeAppearanceOverlay="@style/radius8"/>
 
     <LinearLayout
         android:id="@+id/editTextContainer"
@@ -122,13 +122,13 @@
     <Button
         android:id="@+id/btn_login_specialist"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="80dp"
         android:onClick="openHome"
         android:text="@string/btnLogin"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
